--- a/hooks_demo/src/index.css
+++ b/hooks_demo/src/index.css
@@ -122,3 +122,11 @@ input[type="text"]:focus {
   background-color: #e9ecef;
   transition: background-color 0.2s;
 }
+
+li {
+  list-style-type: none;
+}
+
+section {
+  display: flex;
+}
